--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,7 +14,7 @@ html {
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+  src: url("~/assets/fonts/CircularStd-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -22,7 +22,7 @@ html {
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+  src: url("~/assets/fonts/CircularStd-Book.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -30,7 +30,7 @@ html {
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+  src: url("~/assets/fonts/CircularStd-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -38,7 +38,7 @@ html {
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+  src: url("~/assets/fonts/CircularStd-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -46,7 +46,7 @@ html {
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+  src: url("~/assets/fonts/CircularStd-Black.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
